Adding Fragment for Important feature, such as, Home Fragment, Activity Fragment, Chat Fragment, and Profile Fragment

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,4 +47,6 @@ dependencies {
     //Ext Lib For Dot Indicator
     implementation 'com.tbuonomo:dotsindicator:4.2'
 
+    //Ext Lib for Circular Image
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 }
