--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -49,4 +50,9 @@ dependencies {
 
     //Ext Lib for Circular Image
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+    // Declare the dependencies for any other desired Firebase products
+    implementation platform('com.google.firebase:firebase-bom:26.5.0')
+    implementation 'com.google.firebase:firebase-auth-ktx'
+    implementation 'com.google.firebase:firebase-firestore-ktx'
 }
